# llvm_ocaml_sdk

./: .bazelrc  .gitignore  BUILD.bazel  CONFIG.bzl  EXTENSIONS.bzl  MODULE.bazel  README.adoc  README.md
lib/: README.txt
lib/all_backends/: BUILD.bazel
lib/analysis/: BUILD.bazel
lib/backends/: BUILD.bazel
lib/bitreader/: BUILD.bazel
lib/bitwriter/: BUILD.bazel
lib/debuginfo/: BUILD.bazel
lib/executionengine/: BUILD.bazel
lib/host/: BUILD.bazel
lib/irreader/: BUILD.bazel
lib/linker/: BUILD.bazel
lib/llvm/: BUILD.bazel  llvm.ml  llvm.mli  llvm_ocaml.c
lib/transforms/ipo/: BUILD.bazel  CMakeLists.txt  ipo_ocaml.c
lib/transforms/passmgr_builder/: BUILD.bazel  CMakeLists.txt  passmgr_builder_ocaml.c
lib/transforms/scalar_opts/: BUILD.bazel  CMakeLists.txt  scalar_opts_ocaml.c
lib/transforms/utils/: BUILD.bazel
lib/transforms/vectorize/: BUILD.bazel  CMakeLists.txt  vectorize_ocaml.c
llvm/backends/: BUILD.bazel  RULES.bzl
llvm/bitwriter/: BUILD.bazel
llvm/debuginfo/: BUILD.bazel
llvm/executionengine/: BUILD.bazel
llvm/host/: BUILD.bazel
llvm/transforms/passmgr_builder/: BUILD.bazel
llvm/transforms/utils/: BUILD.bazel
llvm/transforms/vectorize/: BUILD.bazel
src/: README.txt
src/all_backends/: BUILD.bazel
src/analysis/: BUILD.bazel
src/backends/: BUILD.bazel
src/bitreader/: BUILD.bazel
src/bitwriter/: BUILD.bazel
src/debuginfo/: BUILD.bazel
src/executionengine/: BUILD.bazel
src/irreader/: BUILD.bazel
src/linker/: BUILD.bazel
src/llvm/: BUILD.bazel
src/transforms/ipo/: BUILD.bazel
src/transforms/passmgr_builder/: BUILD.bazel
src/transforms/scalar_opts/: BUILD.bazel
src/transforms/utils/: BUILD.bazel
src/transforms/vectorize/: BUILD.bazel
test/: BUILD.bazel
test/Utils/: BUILD.bazel
