module(
    name = "ocaml-llvm",
    version = "0.0.0",
    compatibility_level = 0,
    bazel_compatibility = [">=6.0.0"]
)

bazel_dep(name = "platforms",    version = "0.0.7")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "cc_config",    version = "1.0.0")

bazel_dep(name = "rules_ocaml",  version = "1.0.0")

bazel_dep(name = "obazl",           version = "1.0.0",
          dev_dependency = True)

bazel_dep(name = "ocaml", version = "0.0.0")
register_toolchains("@ocaml//toolchain/selectors/local:all")
register_toolchains("@ocaml//toolchain/profiles:all")

bazel_dep(name = "toolchains_llvm", version = "0.10.3")
local_path_override(
    module_name = "toolchains_llvm",
    path = "/Users/gar/obazl/llvm-bazel-toolchain"
)

# To directly use a commit from GitHub, replace commit with the commit you want.
# Otherwise, omit this block.
# git_override(
#   module_name = "toolchains_llvm",
#   commit = "42e0b400fe316797657ccc5d7d2f9bb6f13071d8",
#   remote = "https://github.com/grailbio/bazel-toolchain",
# )

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "15.0.0",
)

# use_repo(llvm, "llvm_toolchain")
# register_toolchains("@llvm_toolchain//:all")

use_repo(llvm, "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain_llvm//:all")

bazel_dep(name = "ctypes", version = "0.0.0")
bazel_dep(name = "ctypes-foreign", version = "0.0.0")
bazel_dep(name = "unix",   version = "0.0.0")
