LLVM_VERSION = "15.0.7"
module(
    name = "ocaml-llvm",
    version = "1.0.0",
    compatibility_level = 1,
    bazel_compatibility = [">=6.0.0"]
)

bazel_dep(name = "platforms",    version = "0.0.7")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "cc_config",    version = "1.0.0")

bazel_dep(name = "llvm", version = "1.0.0")
# local_path_override(
#     module_name = "llvm",
#     path = "..",
# )

llvm_config = use_extension(
    "@llvm//:EXTENSIONS.bzl",
    "llvm_config"
)
# required: llvm_config.llvm
# optional: llvm_config.c_sdk

llvm_config.llvm(
    version   = LLVM_VERSION,
    llvm_root = "@@//.config/llvm:root"
)
use_repo(llvm_config, "llvm_config")

llvm_config.c_sdk()
use_repo(llvm_config, "llvm_c_sdk")

bazel_dep(name = "obazl",           version = "1.0.0",
          dev_dependency = True)

bazel_dep(name = "rules_ocaml",  version = "1.0.0")
bazel_dep(name = "ocaml", version = "0.0.0")
register_toolchains("@ocaml//toolchain/selectors/local:all")
register_toolchains("@ocaml//toolchain/profiles:all")

bazel_dep(name = "ctypes", version = "0.0.0")
bazel_dep(name = "ctypes-foreign", version = "0.0.0")
bazel_dep(name = "unix",   version = "0.0.0")
