load("@bazel_skylib//rules:build_test.bzl", "build_test")

load(
    "@rules_ocaml//build:rules.bzl",
    "ocaml_archive",
    "ocaml_binary",
    "ocaml_module",
    "ocaml_test",
)

TEST_OPTS = [
    "-g",
    # "-runtime-variant", "d",
    "-cclib", "-lm",
    "-cclib", "-lz",
    "-cclib", "-lstdc++",
    "-cclib", "-lcurses",
    "-ccopt", "/opt/homebrew/lib/libzstd.1.5.5.dylib",
    # "-verbose",
    # "-ccopt", "-Wl,-v", ## pass verbose to assembler
]

test_suite(
    name = "test",
    tests = [
        # ":builds", "clibs",
        ":analysis_test",
        ":bitreader_test",
        ":bitwriter_test",
        ":core_test",
        ":debuginfo_test",
        ":diagnostic_handler_test",
        ":executionengine_test",
        ":ext_exc_test",
        ":ipo_test",
        ":irreader_test",
        ":linker_test",
        # ":passbuilder_test",
        ":passmgr_builder_test",
        ":scalar_opts_test",
        ":target_test",
        ":transform_utils_test",
        ":vectorize_test"
    ]
)

###########
ocaml_test(
    name = "analysis_test",
    main = ":Analysis",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Analysis",
    struct = "analysis.ml",
    deps   = ["//lib/analysis:Analysis"],
    opts = ["-w", "+A-27-70"],
)

###########
ocaml_test(
    name = "bitreader_test",
    args = ["bitcode.bc"],
    main = ":Bitreader",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Bitreader",
    struct = "bitreader.ml",
    deps   = ["//lib/bitreader:Bitreader",
              "//lib/bitwriter:Bitwriter"])

###########
ocaml_test(
    name = "bitwriter_test",
    args = ["bitcode.bc"],
    main = ":Bitwriter",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Bitwriter",
    struct = "bitwriter.ml",
    deps   = ["//lib/bitreader:Bitreader",
              "//lib/bitwriter:Bitwriter"])

###########
ocaml_test(
    name = "core_test",
    args = ["bitcode.bc"],
    main = ":Core",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Core",
    struct = "core.ml",
    deps   = ["//lib/analysis:Analysis",
              "//lib/bitwriter:Bitwriter",
              "//test/Utils:Testsuite"])

###########
ocaml_test(
    name = "debuginfo_test",
    # args = ["bitcode.bc"],
    main = ":Debuginfo",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Debuginfo",
    struct = "debuginfo.ml",
    deps   = ["//lib/all_backends:All_backends",
              "//lib/target:Target",
              "//lib/analysis:Analysis",
              "//lib/debuginfo:Debuginfo",
              "//test/Utils:Testsuite"]
)

###########
ocaml_test(
    name = "diagnostic_handler_test",
    # args = ["bitcode.bc"],
    main = ":Diagnostic_Handler",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Diagnostic_Handler",
    struct = "diagnostic_handler.ml",
    deps   = [
        # "//lib/all_backends:All_backends",
        # "//lib/target:Target",
        # "//lib/analysis:Analysis",
        # "//lib/diagnostic_handler:Debuginfo",
        "//test/Utils:Testsuite"
    ]
)

###########
ocaml_test(
    name = "executionengine_test",
    # args = ["bitcode.bc"],
    main = ":Executionengine",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Executionengine",
    struct = "executionengine.ml",
    deps   = [
        "//lib/llvm:Llvm",
        "//lib/executionengine:Executionengine",
        # "//lib/all_backends:All_backends",
              "//lib/target:Target",
              "//lib/analysis:Analysis",
              "//lib/debuginfo:Debuginfo",
              "//test/Utils:Testsuite"
    ]
)

###########
ocaml_test(
    name = "ext_exc_test",
    main = ":Ext_exc",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Ext_exc",
    struct = "ext_exc.ml",
    deps   = [
        "//lib/llvm:Llvm",
        "//lib/bitreader:Bitreader",
        "//lib/executionengine:Executionengine",
    ]
)


ocaml_test(
    name = "ipo_test",
    main = ":Ipo",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Ipo",
    struct = "ipo.ml",
    deps   = [
        "//lib/llvm:Llvm",
        "//lib/transforms/ipo:Ipo",
        "//lib/transforms/passmgr_builder:Passmgr_builder",
        # "//lib/bitreader:Bitreader",
        # "//lib/executionengine:Executionengine",
    ]
)

###########
ocaml_test(
    name = "irreader_test",
    main = ":Irreader",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Irreader",
    struct = "irreader.ml",
    deps   = ["//lib/llvm:Llvm",
              "//lib/irreader:Irreader"])

###########
ocaml_test(
    name = "linker_test",
    main = ":Linker",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Linker",
    struct = "linker.ml",
    deps   = ["//lib/llvm:Llvm",
              "//lib/linker:Linker"])

###########
# ocaml_test(
#     name = "passbuilder_test",
#     args = ["bitcode.bc"],
#     main = ":passbuilder",
#     opts = TEST_OPTS,
#     toolchains = ["//:repo_paths"],
#     timeout = "short"
# )

# ocaml_module(
#     name = "passbuilder",
#     struct = "passbuilder.ml",
#     deps   = [
#         "//lib/transforms/passbuilder:passbuilder"
#     ]
# )

###########
ocaml_test(
    name = "passmgr_builder_test",
    args = ["bitcode.bc"],
    main = ":Passmgr_builder",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Passmgr_builder",
    struct = "passmgr_builder.ml",
    deps   = [
        "//lib/transforms/passmgr_builder:Passmgr_builder"
    ]
)

###########
ocaml_test(
    name = "scalar_opts_test",
    args = ["bitcode.bc"],
    main = ":Scalar_opts",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Scalar_opts",
    struct = "scalar_opts.ml",
    deps   = [
        "//lib/transforms/passmgr_builder:Passmgr_builder",
        "//lib/transforms/scalar_opts:Scalar_opts"
    ]
)

###########
ocaml_test(
    name = "target_test",
    args = ["bitcode.bc"],
    main = ":Target",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Target",
    struct = "target.ml",
    deps   = [
        "//lib/transforms/passmgr_builder:Passmgr_builder",
        "//lib/all_backends:All_backends",
        "//lib/target:Target"
    ]
)

###########
ocaml_test(
    name = "transform_utils_test",
    args = ["bitcode.bc"],
    main = ":Transform_utils",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Transform_utils",
    struct = "transform_utils.ml",
    deps   = [
        # "//lib/transforms/passmgr_builder:Passmgr_builder",
        # "//lib/all_backends:Llvm_all_backends",
        "//lib/transforms/utils:Transform_utils"
    ]
)

###########
ocaml_test(
    name = "vectorize_test",
    args = ["bitcode.bc"],
    main = ":Vectorize",
    opts = TEST_OPTS,
    toolchains = ["//:repo_paths"],
    timeout = "short"
)

ocaml_module(
    name = "Vectorize",
    struct = "vectorize.ml",
    deps   = [
        "//lib/transforms/passmgr_builder:Passmgr_builder",
        # "//lib/all_backends:Llvm_all_backends",
        "//lib/transforms/vectorize:Vectorize"
    ]
)

################################
build_test(
    name = "builds",
    targets = [
        "//lib/all_backends:All_backends",
        "//lib/analysis:Analysis",
        # "//lib/backends:Backend", # not yet
        "//lib/bitreader:Bitreader",
        "//lib/bitwriter:Bitwriter",
        "//lib/debuginfo:Debuginfo",
        "//lib/executionengine:Executionengine",
        "//lib/irreader:Irreader",
        "//lib/linker:Linker",
        "//lib/llvm:Llvm",
        "//lib/target:Target",
        "//lib/transforms/ipo:Ipo",
        "//lib/transforms/passmgr_builder:Passmgr_builder",
        "//lib/transforms/scalar_opts:Scalar_opts",
        "//lib/transforms/utils:Transform_utils",
        "//lib/transforms/vectorize:Vectorize",
        ]
)

## NB: clib deps of ocaml_module are not built
## until they are needed for linking, so we build
## them separately here.

build_test(
    name = "clibs",
    targets = [
        "//lib/all_backends:all_backends_c",
        "//lib/analysis:analysis_c",
        "//lib/backends:backend_c",
        "//lib/bitreader:bitreader_c",
        "//lib/bitwriter:bitwriter_c",
        "//lib/debuginfo:debuginfo_c",
        "//lib/executionengine:executionengine_c",
        "//lib/irreader:irreader_c",
        "//lib/linker:linker_c",
        "//lib/llvm:llvm_c",
        "//lib/target:target_c",
        "//lib/transforms/ipo:ipo_c",
        "//lib/transforms/passmgr_builder:passmgr_builder_c",
        "//lib/transforms/scalar_opts:scalar_opts_c",
        "//lib/transforms/utils:transform_utils_c",
        "//lib/transforms/vectorize:vectorize_c",
        ]
)
