load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Debuginfo_cmi",
    src = "llvm_debuginfo.mli",
    deps   = ["//lib/llvm:Llvm_cmi"]
)

ocaml_module(
    name = "Debuginfo",
    struct = "llvm_debuginfo.ml",
    sig    = ":Debuginfo_cmi",
    opts   = ["-w", "-labels-omitted"], # 6
    deps   = [":debuginfo_c"],
)

cc_library(
    name = "debuginfo_c",
    srcs = ["debuginfo_ocaml.c"],
    copts = [
        "-I$(@llvm_c_sdk)/include",
        "-I$(@ocaml)/lib/sdk",
        "-I$(@)/lib/llvm"
    ],
    deps = [
        "@llvm_c_sdk//include",
        "@llvm_c_sdk//lib:all-libs",
        "@ocaml//lib/sdk",
        "//lib/llvm:llvm_c"
    ],
    toolchains = ["//:repo_paths"]
)
