load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Executionengine_cmi",
    src = "llvm_executionengine.mli",
    opts = ["-w", "-unexpected-docstring"], # 50
    deps = [
        "@ctypes//lib/ctypes",
        "//lib/target:Target_cmi"
    ]
)

ocaml_module(
    name = "Executionengine",
    struct = "llvm_executionengine.ml",
    sig    = ":Executionengine_cmi",
    opts   = ["-w", "-labels-omitted", # 6
              "-w", "-no-cmx-file"],   # 58
    deps   = [
        "@ctypes//lib/ctypes",
        "@ctypes//lib/foreign",
        "//lib/llvm:Llvm",
        "//lib/target:Target",
        ":executionengine_c"
    ],
)

cc_library(
    name = "executionengine_c",
    srcs = ["executionengine_ocaml.c"],
    copts = [
        "-I$(@llvm_c_sdk)/include",
        "-I$(@ocaml)/lib/sdk",
        "-I$(@)/lib/llvm"
    ],
    deps = [
        "@llvm_c_sdk//include",
        "@llvm_c_sdk//lib:executionengine-libs",
        "@llvm_c_sdk//lib:mcjit-libs",
        "@llvm_c_sdk//lib:native-libs",
        # "@llvm_c_sdk//lib:all-targets-libs",
        "@ocaml//lib/sdk",
        "//lib/llvm:llvm_c"
    ],
    toolchains = ["//:repo_paths"]
)
