package(default_visibility = ["//visibility:public"])

config_setting(name = "aarch64",
               flag_values = {"//lib/target": "host"},
               constraint_values = ["@platforms//cpu:aarch64"])

config_setting(name = "x86",
               flag_values = {"//lib/target": "host"},
               constraint_values = ["@platforms//cpu:x86_64"])

