load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Linker_cmi",
    src = "llvm_linker.mli",
    deps   = ["//llvm/llvm:Llvm"]
)

ocaml_module(
    name = "Linker",
    struct = "llvm_linker.ml",
    sig    = ":Linker_cmi",
    # opts   = ["-w", "-labels-omitted"], # 6
    deps   = [
        "//llvm/llvm:Llvm",
        "//llvm/target:Target",
        ":linker_c"
    ],
)

cc_library(
    name = "linker_c",
    srcs = [
        "linker_ocaml.c",
    ],
    copts = [
        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
    ],
    deps = [
        "@llvm_toolchain_llvm//include:llvm-c",
        "@ocaml//lib/c:sdk",
        "@llvm_toolchain_llvm//lib:linker-libs",
        "@llvm_toolchain_llvm//lib:target-libs",
    ],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
