load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Bitwriter_cmi",
    src = "llvm_bitwriter.mli",
    deps   = ["//llvm/llvm:Llvm"]
)

ocaml_module(
    name = "Bitwriter",
    struct = "llvm_bitwriter.ml",
    sig    = ":Bitwriter_cmi",
    deps   = ["//llvm/llvm:Llvm",
              ":bitwriter_c",
              # eliminate warning about "directory
              # layout change" in v5.
              # (this is not a genuine dep)
              "@unix//lib/unix"
              ],
)

cc_library(
    name = "bitwriter_c",
    srcs = [
        "bitwriter_ocaml.c",
    ],
    copts = [
        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
    ],
    deps = [
        "@llvm_toolchain_llvm//include:llvm-c",
        "@llvm_toolchain_llvm//lib:bitwriter-libs",
        "@ocaml//lib/c:sdk"
    ],
    toolchains = ["//:repo_paths"]
)
