load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Debuginfo_cmi",
    src = "llvm_debuginfo.mli",
    deps   = ["//llvm/llvm:Llvm_cmi"]
)

ocaml_module(
    name = "Debuginfo",
    struct = "llvm_debuginfo.ml",
    sig    = ":Debuginfo_cmi",
    opts   = ["-w", "-labels-omitted"], # 6
    deps   = [":debuginfo_c"],
)

cc_library(
    name = "debuginfo_c",
    srcs = ["debuginfo_ocaml.c"],
    copts = [
        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
        "-I$(@)/llvm/llvm"
    ],
    deps = [
        "@llvm_toolchain_llvm//include:llvm-c",
        "@llvm_toolchain_llvm//lib:all-libs",
        "@ocaml//lib/c:sdk",
        "//llvm/llvm:llvm_c"
    ],
    toolchains = ["//:repo_paths"]
)
