load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Executionengine_cmi",
    src = "llvm_executionengine.mli",
    opts = ["-w", "-unexpected-docstring"], # 50
    deps = [
        "@ctypes//lib/ctypes",
        "//llvm/target:Target_cmi"
    ]
)

ocaml_module(
    name = "Executionengine",
    struct = "llvm_executionengine.ml",
    sig    = ":Executionengine_cmi",
    opts   = ["-w", "-labels-omitted", # 6
              "-w", "-no-cmx-file"],   # 58
    deps   = [
        "@ctypes//lib/ctypes",
        "@ctypes//lib/foreign",
        "//llvm/llvm:Llvm",
        "//llvm/target:Target",
        ":executionengine_c"
    ],
)

cc_library(
    name = "executionengine_c",
    srcs = ["executionengine_ocaml.c"],
    copts = [
        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
    ],
    deps = [
        "@llvm_toolchain_llvm//include:llvm-c",
        "@llvm_toolchain_llvm//lib:executionengine-libs",
        "@llvm_toolchain_llvm//lib:mcjit-libs",
        "@llvm_toolchain_llvm//lib:native-libs",
        # "@llvm_toolchain_llvm//lib:all-targets-libs",
        "@ocaml//lib/c:sdk"
    ],
    toolchains = ["//:repo_paths"]
)
