load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Llvm_all_backends_cm",
    src = "Llvm_all_backends.mli",
    opts = ["-w", "-unexpected-docstring"] # 50
)

ocaml_module(
    name = "Llvm_all_backends",
    struct = "llvm_all_backends.ml",
    opts   = ["-w", "-labels-omitted"], # 6
    deps   = [
        "//src/llvm:Llvm",
        "//src/target:Llvm_target",
        ":all_backends_c"
    ],
)

cc_library(
    name = "all_backends_c",
    srcs = [
        "all_backends_ocaml.c",
        "@llvm_toolchain_llvm//:include",
    ],
    additional_compiler_inputs = [
        "@llvm_toolchain_llvm//:include",
    ],
    copts = [
        "-I$(@toolchains_llvm)/include",
        "-I$(@ocaml)/lib/c",
    ],
    deps = ["@ocaml//lib/c:sdk"],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
